--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     "## Summary\n",
     "\n",
     "\n",
-    "Welcome to the world of the web! In this "
+    "Welcome to the world of the web! In this lesson, you learned about HTML and how web pages are structured."
    ]
   }
  ],
